<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <parent>
        <artifactId>pathetic-main</artifactId>
        <groupId>org.patheloper</groupId>
        <version>2.1.4</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>pathetic-nms</artifactId>
    <version>2.1.4</version>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.8.8-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.patheloper</groupId>
            <artifactId>pathetic-api</artifactId>
            <version>2.1.4</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.patheloper</groupId>
            <artifactId>v1_19_R3</artifactId>
            <version>2.1.4</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.patheloper</groupId>
            <artifactId>v1_19_R2</artifactId>
            <version>2.1.4</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.patheloper</groupId>
            <artifactId>v1_18</artifactId>
            <version>2.1.4</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.patheloper</groupId>
            <artifactId>v1_17</artifactId>
            <version>2.1.4</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.patheloper</groupId>
            <artifactId>v1_16</artifactId>
            <version>2.1.4</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.patheloper</groupId>
            <artifactId>v1_15</artifactId>
            <version>2.1.4</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.patheloper</groupId>
            <artifactId>v1_12</artifactId>
            <version>2.1.4</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.patheloper</groupId>
            <artifactId>v1_8</artifactId>
            <version>2.1.4</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

</project>